segundo commit en rama

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<!-- ESTE SERÁ MAS ADELANTE UN CAROUSEL Y CADA FOTO TENDRÁ UN LINK A ALGUNA DE LAS PÁGINAS DEL SITIO-->
 	
-	<!--<div class="galeria"> -->
+	<!-- <div class="galeria"> -->
 		<div class="padre">
 			<img class="fotoPrincipal" src="images/rsz_foto_central.png" alt="perro y gato">
 			<img class="doble" src="images/rsz_doble_dog.png" alt="perro" />
@@ -73,19 +73,20 @@
 		</div>
 	</div>
 	<div class="ecommerce">
-		<div class="flex">
+		<div class="flex scale transition">
 			<div class="flex__content">
-				<a href="#"><img class="flex__img" src="images/comida_perros.jpg" alt="perros con platito de comida"></a>
+				<img class="flex__img" src="images/comida_perros.jpg" alt="perros con platito de comida"></a>
 			</div>
 		</div>
-		<div class="flex">
+
+		<div class="flex scale transition">
 			<div class="flex__content">
-				<a href="#"><img class="flex__img" src="images/comida_gatos.jpg" alt="gato comiendo"></a>
+				<img class="flex__img" src="images/comida_gatos.jpg" alt="gato comiendo"></a>
 			</div>
 		</div>
-		<div class="flex">
+		<div class="flex scale transition">
 			<div class="flex__content">
-				<a href="#"><img class="flex__img" src="images/juguetes.jpg" alt="juguetes para mascotas"></a>
+				<img class="flex__img" src="images/juguetes.jpg" alt="juguetes para mascotas"></a>
 			</div>
 		</div>
 	</div>
