commit para desafio complementario

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<div class="text-center text-lg-start bg-light text-muted">
 			<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
 				<div class=" resumen me-5 d-none d-lg-block">
-					<span>Conéctese con nosotros en las redes sociales:</span>
+					<span>Conectate con nosotros en las redes sociales:</span>
 			  	</div>
 			  	<div>
 					<a href="https://www.facebook.com/" target="_blank" class="me-4 text-reset"><img src="images/facebook.png" alt="logo de facebook"></a>
