--- a/contacto.html
+++ b/contacto.html
@@ -3,115 +3,143 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos"</title>
 </head>
 <body>
-
-	<div class="icono">
-		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
-	</div>
-
-	<div class="header">
-		<div class="logo">
+	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
+		<div class="row align-items-center"></div>
+		<div class="container-fluid logo">
 			<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 		</div>
-		<div class="slogan">
-			<p>El lugar donde mimamos a tu mascota</p>
+		<div class="container-fluid">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contacto.html">Contacto</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="tienda.html">Tienda</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="inicioSesion">
-			<a href="tienda.html">Iniciar sesión</a>
-			<img src="images/carrito_de_compras.png" alt="carrito de compras">
-			<span>0</span>
+	</nav>
+	<div class="container">
+		<div class="card mb-3 mt-5 bg-info" style="width: 100%;">
+			<div class="row g-0">
+				<div class="col-md-8">
+					<div class="serv_vete">
+			  			<h5 class="card-title mt-5">Dejanos un mensaje</h5>
+			  			<p class="vete card-text">Si tenés alguna duda, consulta y/o sugerencia no dejes de completar el formulario.</p> <p>Nos estaremos comunicando con vos en lo inmediato.</p>
+					</div>
+		 		</div>
+				<div class="serv_pelu col-md-4">
+					<img src="images/perro_gato_compu.jpg" class="img-fluid rounded-start" alt="perro y gato con compu">
+		  		</div>
+			</div>
 		</div>
 	</div>
-
-	<div class="nav">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-		   	<li><a href="nosotros.html">Nosotros</a></li>
-		   	<li><a href="servicios.html">Servicios</a></li>
-		   	<li class="active"><a href="contacto.html">Contacto</a></li>
-		   	<li><a href="tienda.html">Tienda</a></li>
-		</ul>
-	</div>
-
-	<div class="formulario">
-		<form action="" method="POST" enctype="multipart/form-data">
-			<div>
-				<label for="nombre">Nombre:</label>
-				<input type="text" name="nombre" placeholder="Nombre" id="nombre" required>
+	<div class="container mt-5">
+		<form class="row g-3">
+			<div class="col-md-6">
+			  <label for="name" class="form-label">Nombre</label>
+			  <input type="text" class="form-control" id="nombre">
 			</div>
-			<br>
-			<div>
-				<label for="email">E-mail:</label>
-				<input type="email" name="email" placeholder="Email" id="email" required>
+			<div class="col-md-6">
+			  <label for="apellido" class="form-label">Apellido</label>
+			  <input type="text" class="form-control" id="apellido">
 			</div>
-			<br>
-			<div>
-				<label for="teléfono">Teléfono:</label>
-				<input type="tel" name="teléfono" placeholder="Teléfono" id="teléfono">
+			<div class="col-12">
+			  <label for="email" class="form-label">Email</label>
+			  <input type="email" class="form-control" id="email">
 			</div>
-			<br>
-			<div>Mensaje:</div>
-			<br>
-			<textarea name="mensaje" placeholder="Mensaje" required></textarea>
-			<br><br>
-			<div>
-				<input type="submit" name="enviar" value="Enviar">
+			<div class="col-12">
+			  <label for="telefono" class="form-label">Teléfono (opcional)</label>
+			  <input type="tel" class="form-control" id="telefono">
+			</div>
+			<div class="col-12">
+				<label for="mensaje" class="form-label">Mensaje</label>
+				<textarea class="form-control" id="mensaje" style="height: 100px"></textarea>
+			</div>
+			<div class="col-12">
+				<button type="submit" class="btn btn-primary">Enviar</button>
 			</div>
 		</form>
 	</div>
-
-	<div class="otrosServicios">
-	<!-- NO SÉ COMO HACER PARA QUE QUEDE LA IMAGEN DE CADA SERVICIO A LA IZQUIERDA Y CENTRADA AL TEXTO -->
-		<div class="envios">
-			<img src="images/camion.png" alt="camion de envios">
-			<span>ENVÍOS SIN CARGO</span>
-			<p>En CABA y GBA</p>
-		</div>
-		<div class="descuentos">
-			<img src="images/simbolo_pesos.png" alt="simbolo de pesos">
-			<span>DESCUENTOS EXTRAS</span>
-			<p>Pagando en efectivo</p>
-		</div>
-		<div class="tarjeta">
-			<img src="images/tarjeta.png" alt="tarjeta de credito">
-			<span>PAGÁ CON TARJETA</span>
-			<p>En cuotas sin interés</p>
+	<div class="container header_servicios">
+		<div class="pelu card bg-info">
+			<div class=" fs-1 card-body">
+				<p>O mejor vení con tu amiguito a avisitarnos !!!</p>
+			</div>
 		</div>
 	</div>
-
-	<div class="footer">
-		<div class="contacto">
-			<p>CONTÁCTANOS</p>
-			<ul>
-				<li>
-					<img src="images/telefono.png" alt="tubo de telefono"><a href="tel:0810-555-5555">0810-555-5555</a>
-				</li>
-				<li>
-					<img src="images/email.png" alt="simbolo de arroba"><a href="mailto:info@petshopamigospeludos.com">info@petshopamigospeludos.com</a>
-				</li>
-				<li>
-					<img src="images/ubicacion.png" alt="simbolo de ubicacion"><a href="contacto.html">Italia 490 - Vicente López</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="mapa">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3287.5482278745512!2d-58.475688855576884!3d-34.51433586999774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb145590ed4cf%3A0x58cd7a6fcea65321!2sItalia%20490%2C%20Vicente%20L%C3%B3pez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1635976645652!5m2!1ses!2sar" width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
-		</div>
-
-		<div class="redes">
-			<p>REDES SOCIALES</p>
-			<a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" alt="logo de facebook"></a>
-			<a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png" alt="logo de instagram"></a>
-			<a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" alt="logo de twitter"></a>
+	<div class="container">
+		<div class="mapa mt-5">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3287.5482278745512!2d-58.475688855576884!3d-34.51433586999774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb145590ed4cf%3A0x58cd7a6fcea65321!2sItalia%20490%2C%20Vicente%20L%C3%B3pez%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1635976645652!5m2!1ses!2sar" width="600" height="450"  loading="lazy"></iframe>
 		</div>
 	</div>
-
-	<div class="copyright">
-		<p>© Pet-Shop Amigos Peludos</p>
+	<div class="container footer">
+		<div class="text-center text-lg-start bg-light text-muted">
+			<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+				<div class=" resumen me-5 d-none d-lg-block">
+					<span>Conectate con nosotros en las redes sociales:</span>
+			  	</div>
+			  	<div>
+					<a href="https://www.facebook.com/" target="_blank" class="me-4 text-reset"><img src="images/facebook.png" alt="logo de facebook"></a>
+					<a href="https://www.instagram.com/" target="_blank" class="me-4 text-reset"><img src="images/instagram.png" alt="logo de instagram"></a>
+					<a href="https://twitter.com/" target="_blank" class="me-4 text-reset"><img src="images/twitter.png" alt="logo de twitter"></a>
+				</div>
+			</div>
+			<div>
+			  	<div class="container text-center text-md-start mt-5">
+					<div class="mision row mt-3">
+				  		<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+							<h6 class="mb-4">"Amigos Peludos"</h6>
+							<p> Nos encontramos en zona norte. Somos el único lugar dónde mimamos a tu mascota siendo nuestra mayor alegría que ellas sean felices y estén cómodas y contentas. </p>
+				  		</div>
+				  		<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+							<h6 class="mb-4">Productos</h6>
+							<p><a href="tienda.html">Royal Canin</a></p>
+							<p><a href="tienda.html">Proplan</a></p>
+							<p><a href="tienda.html">Vital Can</a></p>
+				  		</div>
+						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+							<h6 class="mb-4">Links</h6>
+							<p><a href="servicios.html">Servicios</a></p>
+							<p><a href="tienda.html">Tienda</a></p>
+							<p><a href="nosotros.html">Nosotros</a></p>
+				  		</div>
+				  		<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+							<h6 class="mb-4">Contacto</h6>
+							<p><a href="contacto.html">Italia 490 - Vicente López</p>
+							<p><a href="mailto:info@petshopamigospeludos.com">info@petshopamigospeludos.com</a></p>
+							<p><a href="tel:0810-555-5555">0810-555-5555</a></p>
+				  		</div>
+					</div>
+				</div>
+			</div>
+			<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
+		</div>
 	</div>
+	<div class="icono">
+		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
+		</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+	
