--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos"</title>
 </head>
 <body>
@@ -99,7 +98,7 @@
 		<div class="text-center text-lg-start bg-light text-muted">
 			<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
 				<div class=" resumen me-5 d-none d-lg-block">
-					<span>Conéctese con nosotros en las redes sociales:</span>
+					<span>Conectate con nosotros en las redes sociales:</span>
 			  	</div>
 			  	<div>
 					<a href="https://www.facebook.com/" target="_blank" class="me-4 text-reset"><img src="images/facebook.png" alt="logo de facebook"></a>
