commit para segunda pre entrega pf

--- a/tienda.html
+++ b/tienda.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos"</title>
@@ -10,10 +11,10 @@
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
 		<div class="row align-items-center"></div>
-		<div class="container-fluid logo">
+		<div class="animate__animated animate__backInLeft container-fluid logo ">
 			<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 		</div>
-		<div class="container-fluid">
+		<div class="animate__animated animate__backInRight container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
@@ -39,6 +40,146 @@
 		</div>
 	</nav>
 
+	<div class="container mt-5">
+		<div class="row row-cols-1 row-cols-md-3 g-4">
+			<div class="col">
+			  <div class="card h-100">
+					<img src="images/proplan.jpg" class="card-img-top" alt="comida para perros proplan">
+					<div class="card-body">
+					  <p class="card-text">PRO PLAN PUPPY SMALL RAZA PEQUEÑA</p>
+					</div>
+					<div class="card-footer">
+				  		<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 1260.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/royal_canin.jpg" class="card-img-top" alt="comida para perros royal canin">
+					<div class="card-body">
+					  <p class="card-text">ROYAL CANIN PREMIUM DOG x 20 KG</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 1560.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/vital_can.jpg" class="card-img-top" alt="comida para perros vitalcan">
+					<div class="card-body">
+				  		<p class="card-text">VITALCAN COMPLETE JUNIOR RAZA MEDIANA/GRANDE</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 1380.-</small>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container mt-5">
+		<div class="row row-cols-1 row-cols-md-3 g-4">
+			<div class="col">
+			  <div class="card h-100">
+					<img src="images/proplan_cat.jpg" class="card-img-top" alt="comida para gatos proplan">
+					<div class="card-body">
+					  <p class="card-text">PRO PLAN GATO URINARY</p>
+					</div>
+					<div class="card-footer">
+				  		<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 510.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/royal_canin_cat.jpg" class="card-img-top" alt="comida para gatos royal canin">
+					<div class="card-body">
+					  <p class="card-text">ROYAL CANIN PREMIUM GATO ADULTO x 10 KG</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 1670.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/vitalcan_cat.jpg" class="card-img-top" alt="comida para gatos vitalcan">
+					<div class="card-body">
+				  		<p class="card-text">VITALCAN COMPLETE GATO KITTEN</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 850.-</small>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container mt-5">
+		<div class="row row-cols-1 row-cols-md-3 g-4">
+			<div class="col">
+			  <div class="card h-100">
+					<img src="images/comedero.jpg" class="card-img-top" alt="dispenser de comida">
+					<div class="card-body">
+					  <p class="card-text">DISPENSER AGUA/COMIDA</p>
+					</div>
+					<div class="card-footer">
+				  		<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 2730.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/rascador.jpg" class="card-img-top" alt="juguete para mascota">
+					<div class="card-body">
+					  <p class="card-text">RASCADOR TORRE CASA DEL ARBOL</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 12590.-</small>
+						</div>
+					</div>
+			  	</div>
+			</div>
+			<div class="col">
+			  	<div class="card h-100">
+					<img src="images/transportadora.jpg" class="card-img-top" alt="caja transportadora para mascota">
+					<div class="card-body">
+				  		<p class="card-text">PET'S BOX TRANSPORTADORA</p>
+					</div>
+					<div class="card-footer">
+						<div class="carrito price card-body">
+							<button type="button" class="btn btn-info">Agregar al carrito<a href="#" class="card-link"></a></button>
+							<small>$ 3140.-</small>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div> 
 	<div class="container">
 		<div class=" mt-5 row row-cols-1 row-cols-md-3 g-4">
 		  <div class="col">
@@ -120,11 +261,6 @@
 			<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
 		</div>
 	</div>
-
-	
-
-	
-	
 	<div class="icono">
 		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
 	</div>
