--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos"</title>
@@ -10,35 +11,35 @@
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
 		<div class="row align-items-center"></div>
-		<div class="container-fluid logo">
+		<div class="animate__animated animate__backInLeft container-fluid logo">
 			<img src="images/logo.png" alt="logo">
 		</div>
-		<div class="container-fluid">
+		<div class="animate__animated animate__backInRight container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					<li class="active">
+						<a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+						<a class="nav-link" aria-current="page" href="nosotros.html">Nosotros</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
+						<a class="nav-link" aria-current="page" href="servicios.html">Servicios</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contacto.html">Contacto</a>
+						<a class="nav-link" aria-current="page" href="contacto.html">Contacto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="tienda.html">Tienda</a>
+						<a class="nav-link" aria-current="page" href="tienda.html">Tienda</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<div id="carouselExampleIndicators" class="carousel slide w-75 m-auto" data-bs-ride="carousel">
+	<div id="carouselExampleIndicators" class="carousel slide mt-4 w-75 m-auto" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -106,20 +107,20 @@
 		</div>
 	  </div>
 	</div>
-	<div class=" ecommerce container">
+	<div class="ecommerce container">
 	  <div class="row imp">
 		<div class="col-sm-4">
-		  <div class="card">
+		  <div class="card scale transition">
 			<div class="card-body">
 				<img src="images/comida_perros.jpg" class="card-img-top" alt="perros con plato">
 			  	<h5 class="card-title mt-5">Ricos en proteínas y fibras</h5>
 			 	<p class="card-text">Para que sólo tengas que pensar en pasar tiempo con tu fiel amigo.</p>
-			  	<a href="tienda.html" class="btn btn-info">Visitá nuestra tienda</a>
+				<a href="tienda.html" class="btn btn-info">Visitá nuestra tienda</a>
 			</div>
 		  </div>
 		</div>
 		<div class="col-sm-4">
-			<div class="card">
+			<div class="card scale transition">
 			  <div class="card-body">
 				<img src="images/comida_gatos.jpg" class="card-img-top" alt="gato comiendo">
 				<h5 class="card-title mt-5">Saludables y nutritivos</h5>
@@ -129,7 +130,7 @@
 			</div>
 		  </div>
 		<div class="col-sm-4">
-		  <div class="card">
+		  <div class="card scale transition">
 			<div class="card-body">
 				<img src="images/juguetes.jpg" class="card-img-top" alt="juguetes de mascotas">
 				<h5 class="card-title mt-5">Alegres y coloridos</h5>
@@ -183,9 +184,6 @@
 			<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
 		</div>
 	</div>
-
-
-	
 	<div class="icono">
 		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
 	</div>
