--- a/nosotros.html
+++ b/nosotros.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos"</title>
@@ -10,10 +11,10 @@
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
 		<div class="row align-items-center"></div>
-		<div class="container-fluid logo">
+		<div class="animate__animated animate__backInLeft container-fluid logo">
 			<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 		</div>
-		<div class="container-fluid">
+		<div class="animate__animated animate__backInRight container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 			</button>
