commit para re-entrega

--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="perros, gatos, veterinaria, peluquería, alimentos, accesorios, envíos, tarjetas, promociones,descuentos">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/estilos_compilados.css">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Pet-shop "Amigos Peludos. Un lugar con los mejores profesionales para atender a nuestros amiguitos de cuatro patas"</title>
 </head>
 <body>
