ultimo commit pf

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	</div>
 	<div class="ecommerce container">
 	  <div class="row imp">
-		<div class="col-sm-4">
+		<div class="col-sm-4 pt-5">
 		  <div class="card scale transition">
 			<div class="card-body">
 				<img src="images/comida_perros.jpg" class="card-img-top" alt="perros con plato">
@@ -121,7 +121,7 @@
 			</div>
 		  </div>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-4 pt-5">
 			<div class="card scale transition">
 			  <div class="card-body">
 				<img src="images/comida_gatos.jpg" class="card-img-top" alt="gato comiendo">
@@ -131,7 +131,7 @@
 			  </div>
 			</div>
 		  </div>
-		<div class="col-sm-4">
+		<div class="col-sm-4 pt-5">
 		  <div class="card scale transition">
 			<div class="card-body">
 				<img src="images/juguetes.jpg" class="card-img-top" alt="juguetes de mascotas">
